# AegisKey-Orchestrator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  architecture.md
env/: .env  .env.example
examples/: demo_workflow.rs  sample.txt
scripts/: generate_report.sh  rotate_keys.sh  setup.sh
src/: cli.rs  config.rs  crypto.rs  error.rs  keys.rs  lib.rs  logging.rs  main.rs  profiles.rs  report.rs
tests/: integration_test.rs
