[package]
name = "aegiskey-orchestrator"
version = "1.4.2"
edition = "2021"
authors = ["Maurice Berthelot <m.berthelot@malwarius.io>"]
description = "Internal key orchestrator for Malwarius infrastructure"
license = "MIT"
repository = "https://github.com/malwarius/AegisKey-Orchestrator"
readme = "README.md"
keywords = ["encryption", "key-management", "orchestrator", "internal"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "aegiskey"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
anyhow = "1"
thiserror = "1"

[features]
cli_tests = []

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
